--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -44,7 +44,7 @@ labels:
      
    - name: featuredX
      color: 336699
-     description: New functionality 🐛.
+     description: New functionality .
      
    - name: bugzyX
      color: CC0000
