--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -57,16 +57,15 @@ repository:
    
 ## define Labels for Issues and Pull Requests
 labels:
-    
-  - name: bugZ
-    color: CC0000
-    description: An issue with the system.
-    
-  - name: featureX
-    color: 336699
-    description: New functionality.
-    
-  - name: first-timers-only
-    # include the old name to rename an existing label
-    oldname: Help Wanted
-
+   
+ - name: bug0
+   color: CC0000
+   description: An issue with the system.
+   
+ - name: feature0
+   color: 336699
+   description: New functionality.
+   
+ - name: first-timers-only
+   # include the old name to rename an existing label
+   oldname: Help Wanted
