--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -61,11 +61,12 @@ repository:
 labels:
    
  - name: referred
-   color: 007700
-   description:  pullrequest applyed on opened issue
+   color: ededed
+   description: pullrequest applyed on opened issue
  - name: confirmed
-   color: 5319e7
+   color: ededed
    description: reliable content, confirmed by many people ( can be reproduced if an issue)
  - name: employed
    color: ededed
    description: issues with some pullrequest dedicated about
+
