--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -69,4 +69,29 @@ labels:
  - name: employed
    color: ededed
    description: issues with some pullrequest dedicated about
+ - name: duplication
+   color: bfdadc
+   description: duplicate an already existing issue that have been reported before.
+ - name: filled
+   color: bfd4f2
+   description: Issues reported on the good way. with all fields filled
+ - name: irrelevant
+   color: fbca04
+   description: unrelated improper inappropriate incongruous inept inapt.
+   
+ - name: newfeature-type
+   color: 009800
+   description: asking for a new functionality to be added. 
+ - name: enhancement-type
+   color: 1d76db
+   description: ask for modification of an existing feature.
+ - name: question-type
+   color: cc317c
+   description: need help or have something to ask, (e.g. how to do something)
+ - name: feedback-type
+   color: 006b75
+   description: give tests and analyse that could help for project development.
+ - name: bug-type
+   color: b71c1c
+   description: about unintended behaviours that need correction.
 
