--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -114,4 +114,255 @@ labels:
  - name: user-level:expert
    color: 7057ff
    description: issues made by high experie-languagenced contributor
+   
+ - name: language:english
+   color: 8ed9e2
+   description: software language in use
+ - name: language:french
+   color: 8ed9e2
+   description: software language in use
+ - name: language:italian
+   color: 8ed9e2
+   description: software language in use
+ - name: language:portuguese
+   color: 8ed9e2
+   description: software language in use
+ - name: language:russian
+   color: 8ed9e2
+   description: software language in use
+ - name: language:spanish
+   color: 8ed9e2
+   description: software language in use
+ - name: language:arabic
+   color: 8ed9e2
+   description: software language in use
+ - name: language:chinese
+   color: 8ed9e2
+   description: software language in use
+   
+ - name: version:2.4.3
+   color: 8ed9e2
+   description: software Version concerned
+ - name: version:1.2.3
+   color: 8ed9e2
+   description: software Version concerned
+ - name: version:beta
+   color: 8ed9e2
+   description: software Version concerned
+   
+ - name: device:laptop
+   color: fad8c7
+   description: computers with keyboard suitable for use while traveling.(notebook)
+ - name: device:desktop
+   color: fad8c7
+   description:  not portable computers, consists of seperate case,monitor,keyboard,mouse.
+ - name: device:tablet
+   color: 59d683
+   description: portable touchscreen(no keyboard) computers.
+ - name: device:smartphone
+   color: 59d683
+   description: pocket computers, designed to be used in hand with main function of phone.
 
+   
+ - name: os:linux
+   color: c7def8
+   description: occur on linux.
+ - name: os:mac
+   color: c7def8
+   description: running on macOS..
+ - name: os:windows
+   color: c7def8
+   description: run on Windows operating system
+ - name: os:android
+   color: c7def8
+   description: using android software platform
+ - name: os:ios
+   color: c7def8
+   description: using iOS software platform
+   
+ - name: inquiry:behavior
+   color: ff4400
+   description: asking for better understanding of fonctionality
+ - name: inquiry:help
+   color: ff4400
+   description: asking help about unknow fonctionality
+ - name: inquiry:howtodo
+   color: ff4400
+   description: request help for a proper use
+   
+  - name: trouble:crash
+   color: e11d21inquiry
+   description: reports premature software terminating.
+ - name: trouble:freezing
+   color: e6e6e6
+   description: infinite blocking loop.
+ - name: trouble:lag
+   color: e6e6e6
+   description: software slowing down the interaction
+ - name: trouble:glitch
+   color: e6e6e6
+   description: short lived fault in the software
+ - name: trouble:failure
+   color: e6e6e6
+   description: includ data loss , errors and warnings
+ - name: trouble:conflict
+   color: e6e6e6
+   description: incompatibility with others software or with specific devices.
+ - name: trouble:security
+   color: e6e6e6
+   description: unwanted expose of privacy or unauthorized privileges access.
+   
+ - name: request:option
+   color: e6e6e6
+   description: argunents for including a new option in the settings
+ - name: request:plugin
+   color: e6e6e6
+   description: discusion for new extension,addon,plugin
+ - name: request:menu
+   color: e6e6e6
+   description: suggest to add a new fonction in menu 
+ - name: request:data
+   color: e6e6e6
+   description: aboat creation of any new image,sound,model files
+ - name: request:builtin
+   color: e6e6e6
+   description: idea of new fonctionality integration
+   
+ - name: suggest:remove
+   color: e6e6e6
+   description: suggest to delete an useless exiting feature
+ - name: suggest:replace
+   color: e6e6e6
+   description: suggest to change an exiting feature by something else
+ - name: suggest:extend
+   color: e6e6e6
+   description: suggest to add more functionality to an exiting feature
+ - name: suggest:improve
+   color: e6e6e6
+   description: suggest to enhance performance of an exiting feature
+   
+ - name: report:statistics
+   color: e6e6e6
+   description: submit result of statistics
+ - name: report:test
+   color: e6e6e6
+   description: submit result of test
+ - name: report:benchmark
+   color: e6e6e6
+   description: submit result of benchmark
+ - name: report:description
+   color: e6e6e6
+   description: submit result of analyse
+ - name: report:exam
+   color: f4f19c
+   description: submit result of examination
+   
+ - name: about:language
+   color: cc317c
+   description: related to localization and translation (i18n)
+ - name: about:documentation
+   color: b4ea5d
+   description: Related to any type of documentation and manual.
+ - name: about:client
+   color: 0e8a16
+   description: concerning the local part of the software
+ - name: about:service
+   color: 59d683
+   description: concerning the distant server application
+ - name: about:account
+   color: 0052cc
+   description: concerning user,player/admin account(login,password authentication)
+ - name: about:install
+   color: fef2c0
+   description: Related to installation on different OS and building from source files
+ - name: about:startup
+   color: c2e0c6
+   description: concern starting process at launch time.
+ - name: about:network
+   color: f7c6c7
+   description: Related to network rfc,protocols conexion.
+ - name: about:api
+   color: c7def8
+   description: Related to Application Programming Interface.
+ - name: about:extention
+   color: fbca04
+   description: concern plugins addons and others extentions
+ - name: about:ui
+   color: 99cc00
+   description: Related to user interface and visual design.
+ - name: about:accessibility
+   color: dbc2f9
+   description: concern about for disabled people
+ - name: about:menu
+   color: c5def5
+   description: options in aplication menu interface
+ - name: about:save
+   color: fef2c0
+   description: Related to records files and backups
+ - name: about:open
+   color: fef2c0
+   description: related to load data files (e.g. opening file for editing)
+ - name: about:edit
+   color: c5def5
+   description: related to files editing
+ - name: about:settings
+   color: c5def5
+   description: about configuration and preferences
+ - name: about:files
+   color: 0052cc
+   description: store organisation for files and directories
+ - name: about:data
+   color: 0052cc
+   description: about not visible audible purpose data 
+ - name: about:image
+   color: 0052cc
+   description: about image pictures icons 
+ - name: about:texture
+   color: 0052cc
+   description: concerning image texture for 3d models
+ - name: about:sound
+   color: 0052cc
+   description: concerning audio fx noises
+ - name: about:animation
+   color: 0052cc
+   description: concerning animation and video movies
+ - name: about:3d
+   color: 0052cc
+   description: concerning 3d vector model shape
+ - name: about:logs
+   color: c5def5
+   description: concerning logs message notification outputs
+ - name: about:message
+   color: c5def5
+   description:  about diplayed notification
+ - name: about:physics
+   color: 0052cc
+   description: about physics  engine
+ - name: about:render
+   color: 0052cc
+   description: about graphic render engine
+ - name: about:ai
+   color: 0052cc
+   description: about artificial inteligencee
+ - name: about:pathfinder
+   color: 0052cc
+   description: about finding path in models
+ - name: about:gameplay
+   color: 0052cc
+   description: define goal and rules of the game,
+ - name: about:devlopement
+   color: 006400
+   description: the project road map and long term plan
+ - name: about:license
+   color: 006400
+   description: license atribution
+ - name: about:contribution
+   color: 006400
+   description: rules and guidlines for contributing.
+ - name: about:repository
+   color: e6e6e6
+   description: concerne repository organisation and management.
+   
+#  - name: first-timers-only
+#    ## include the old name to rename an existing label
+#    oldname: Help Wanted
