--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -67,32 +67,32 @@ labels:
    color: 00ffff
    description: pullrequest applyed on opened issue
  - name: filled
-   color: 00aa00
+   color: aaffaa
    description: Issues reported on the good way. with all fields filled
  - name: confirmed
    color: 00ff00
    description: reliable content, confirmed by many people ( can be reproduced if an issue)
  - name: duplication
-   color: ffaa00
+   color: ffaa33
    description: duplicate an already existing issue that have been reported before.
  - name: irrelevant
    color: aa0000
    description: unrelated improper inappropriate incongruous inept inapt.
    
  - name: type:newfeature
-   color: 009800
+   color: 3333aa
    description: asking for a new functionality to be added. 
  - name: type:enhancement
-   color: 1d76db
+   color: 3333aa
    description: ask for modification of an existing feature.
  - name: type:question
-   color: cc317c
+   color: 3333aa
    description: need help or have something to ask, (e.g. how to do something)
  - name: type:feedback
-   color: 006b75
+   color: 3333aa
    description: give tests and analyse that could help for project development.
  - name: type:bug
-   color: b71c1c
+   color: 3333aa
    description: about unintended behaviours that need correction.
    
  - name: priority:high
@@ -106,13 +106,13 @@ labels:
    description: trivial and minor topics, will be proced if nothing more serious.
    
  - name: user-level:novice
-   color: 7057ff
+   color: ffaaff
    description: issues made by beginners contributor
  - name: user-level:average
-   color: 7057ff
+   color: ff00ff
    description: issues made by intermediate contributor
  - name: user-level:expert
-   color: 7057ff
+   color: aa00aa
    description: issues made by high experie-languagenced contributor
    
  - name: language:english
@@ -180,185 +180,189 @@ labels:
    description: using iOS software platform
    
  - name: inquiry:behavior
-   color: e6e6e6
+   color: 8888dd
    description: asking for better understanding of fonctionality
  - name: inquiry:help
-   color: e6e6e6
+   color: 8888dd
    description: asking help about unknow fonctionality
  - name: inquiry:howtodo
-   color: e6e6e6
+   color: 8888dd
    description: request help for a proper use
    
  - name: trouble:crash
-   color: e6e6e6
+   color: 8888dd
    description: reports premature software terminating.
  - name: trouble:freezing
-   color: e6e6e6
+   color: 8888dd
    description: infinite blocking loop.
  - name: trouble:lag
-   color: e6e6e6
+   color: 8888dd
    description: software slowing down the interaction
  - name: trouble:glitch
-   color: e6e6e6
+   color: 8888dd
    description: short lived fault in the software
  - name: trouble:failure
-   color: e6e6e6
+   color: 8888dd
    description: includ data loss , errors and warnings
  - name: trouble:conflict
-   color: e6e6e6
+   color: 8888dd
    description: incompatibility with others software or with specific devices.
  - name: trouble:security
-   color: e6e6e6
+   color: 8888dd
    description: unwanted expose of privacy or unauthorized privileges access.
    
  - name: request:option
-   color: e6e6e6
+   color: 8888dd
    description: argunents for including a new option in the settings
  - name: request:plugin
-   color: e6e6e6
+   color: 8888dd
    description: discusion for new extension,addon,plugin
  - name: request:menu
-   color: e6e6e6
+   color: 8888dd
    description: suggest to add a new fonction in menu 
  - name: request:data
-   color: e6e6e6
+   color: 8888dd
    description: aboat creation of any new image,sound,model files
  - name: request:builtin
-   color: e6e6e6
+   color: 8888dd
    description: idea of new fonctionality integration
    
  - name: suggest:remove
-   color: e6e6e6
+   color: 8888dd
    description: suggest to delete an useless exiting feature
  - name: suggest:replace
-   color: e6e6e6
+   color: 8888dd
    description: suggest to change an exiting feature by something else
  - name: suggest:extend
-   color: e6e6e6
+   color: 8888dd
    description: suggest to add more functionality to an exiting feature
  - name: suggest:improve
-   color: e6e6e6
+   color: 8888dd
    description: suggest to enhance performance of an exiting feature
    
  - name: report:statistics
-   color: e6e6e6
+   color: 8888dd
    description: submit result of statistics
  - name: report:test
-   color: e6e6e6
+   color: 8888dd
    description: submit result of test
  - name: report:benchmark
-   color: e6e6e6
+   color: 8888dd
    description: submit result of benchmark
  - name: report:description
-   color: e6e6e6
+   color: 8888dd
    description: submit result of analyse
  - name: report:exam
-   color: e6e6e6
+   color: 8888dd
    description: submit result of examination
    
  - name: about:language
-   color: c5def5
+   color: ccccff
    description: related to localization and translation (i18n)
  - name: about:documentation
-   color: c5def5
+   color: ccccff
    description: Related to any type of documentation and manual.
  - name: about:client
-   color: c5def5
+   color: ccccff
    description: concerning the local part of the software
  - name: about:service
-   color: c5def5
+   color: ccccff
    description: concerning the distant server application
  - name: about:account
-   color: c5def5
+   color: ccccff
    description: concerning user,player/admin account(login,password authentication)
  - name: about:install
-   color: c5def5
+   color: ccccff
    description: Related to installation on different OS and building from source files
  - name: about:startup
-   color: c5def5
+   color: ccccff
    description: concern starting process at launch time.
  - name: about:network
-   color: c5def5
+   color: ccccff
    description: Related to network rfc,protocols conexion.
  - name: about:api
-   color: c5def5
+   color: ccccff
    description: Related to Application Programming Interface.
  - name: about:extention
-   color: c5def5
+   color: ccccff
    description: concern plugins addons and others extentions
  - name: about:ui
-   color: c5def5
+   color: ccccff
    description: Related to user interface and visual design.
  - name: about:accessibility
-   color: c5def5
+   color: ccccff
    description: concern about for disabled people
  - name: about:menu
-   color: c5def5
+   color: ccccff
    description: options in aplication menu interface
  - name: about:save
-   color: c5def5
+   color: ccccff
    description: Related to records files and backups
  - name: about:open
-   color: c5def5
+   color: ccccff
    description: related to load data files (e.g. opening file for editing)
  - name: about:edit
-   color: c5def5
+   color: ccccff
    description: related to files editing
  - name: about:settings
-   color: c5def5
+   color: ccccff
    description: about configuration and preferences
  - name: about:files
-   color: c5def5
+   color: ccccff
    description: store organisation for files and directories
  - name: about:data
-   color: c5def5
+   color: ccccff
    description: about not visible audible purpose data 
  - name: about:image
-   color: c5def5
+   color: ccccff
    description: about image pictures icons 
  - name: about:texture
-   color: c5def5
+   color: ccccff
    description: concerning image texture for 3d models
  - name: about:sound
-   color: c5def5
+   color: ccccff
    description: concerning audio fx noises
  - name: about:animation
-   color: c5def5
+   color: ccccff
    description: concerning animation and video movies
  - name: about:3d
-   color: c5def5
+   color: ccccff
    description: concerning 3d vector model shape
  - name: about:logs
-   color: c5def5
+   color: ccccff
    description: concerning logs message notification outputs
  - name: about:message
-   color: c5def5
+   color: ccccff
    description:  about diplayed notification
  - name: about:physics
-   color: c5def5
+   color: ccccff
    description: about physics  engine
  - name: about:render
-   color: c5def5
+   color: ccccff
    description: about graphic render engine
  - name: about:ai
-   color: c5def5
+   color: ccccff
    description: about artificial inteligencee
  - name: about:pathfinder
-   color: c5def5
+   color: ccccff
    description: about finding path in models
  - name: about:gameplay
-   color: c5def5
+   color: ccccff
    description: define goal and rules of the game,
  - name: about:devlopement
-   color: c5def5
+   color: ccccff
    description: the project road map and long term plan
  - name: about:license
-   color: c5def5
+   color: ccccff
    description: license atribution
  - name: about:contribution
-   color: c5def5
+   color: ccccff
    description: rules and guidlines for contributing.
  - name: about:repository
-   color: c5def5
+   color: ccccff
    description: concerne repository organisation and management.
+
+#  - name: first-timers-only
+#    ## include the old name to rename an existing label
+#    oldname: Help Wanted
 
