--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -361,3 +361,74 @@ labels:
  - name: about:repository
    color: ccccff
    description: concerne repository organisation and management.
+   
+#  - name: first-timers-only
+#    ## include the old name to rename an existing label
+#    oldname: Help Wanted
+
+
+## define milestones for Issues and Pull Requests
+milestones:
+ - title: beta-release
+   description: stage required for the the next release
+   ## state of the milestone can be `open` or `close`
+   state: open
+
+
+## give specific users access to this repository.
+#collaborators:
+#    ## Note: Only valid on organization-owned repositories.
+#    ## The permission to grant the collaborator. Can be one of:
+#    ## * `pull` - can pull, but not push to or administer this repository.
+#    ## * `push` - can pull and push, but not administer this repository.
+#    ## * `admin` - can pull,push and administer this repository.
+#  - username: hubot
+#    permission: pull
+
+## NOTE: The APIs needed for teams are not supported yet by GitHub Apps
+## https://developer.github.com/v3/apps/available-endpoints/
+#teams:
+#  - name: core
+#    permission: admin
+   
+#  - name: docs
+#    permission: push
+
+## branches
+#branches:
+#  - name: master
+#    ## https://developer.github.com/v3/repos/branches/#update-branch-protection
+#    ## Branch Protection settings. Set to null to disable
+#    protection:
+#      ## Required. Require at least one approving review on a pull request, before merging. Set to null to disable.
+#      ## cannot have review approval on my own pull requests, so cannot use it if im working alone. 
+#      ## or this restriction can be pass by unable the option:'admin also' 
+#      ## in this case all owner/contributors can force any pull request approval without any review.
+#      ## so, for make pull request aproval by review avalable, need at least 2 contributors.
+#      required_pull_request_reviews:
+#        ## The number of approvals required. (1-6)
+#        required_approving_review_count: 1
+#        ## Dismiss approved reviews automatically when a new commit is pushed.
+#        dismiss_stale_reviews: true
+#        ## Blocks merge until code owners have reviewed.
+#        require_code_owner_reviews: true
+#        ## Specify which users and teams can dismiss pull request reviews.
+#        ## Pass an empty dismissal_restrictions object to disable.
+#        ## User and team dismissal_restrictions are only available for organization-owned repositories. 
+##       ## Omit this parameter for personal repositories.
+#        dismissal_restrictions:
+#          users: []
+#          teams: []
+#      ## Required. Require status checks to pass before merging. Set to null to disable
+#      required_status_checks:
+#        ## Required. Require branches to be up to date before merging.
+#        strict: true
+#        ## Required. The list of status checks to require in order to merge into this branch
+#        contexts: []
+#      ## Required. Enforce all configured restrictions for administrators. Set to true to enforce required status checks for repository administrators. Set to null to disable.
+#      enforce_admins: true
+#      ## Required. Restrict who can push to this branch. Team and user restrictions are only available for organization-owned repositories. Set to null to disable.
+#      restrictions:
+#        users: []
+#        teams: []
+
